Admin functional added. Bootstrap update, few minor fixes all over the project